--- a/13-Effects.Rmd
+++ b/13-Effects.Rmd
@@ -174,19 +174,19 @@ The Smart Screen Effects Editor allows users to quickly build effects within the
     
 6.  The Pattern may be changed by by tapping any of the following: 
     
-  ◾ / Fixtures move in a positive direction across the selection. 
+    ◾ / Fixtures move in a positive direction across the selection. 
   
-  ◾ \ Fixture move in a negative direction across the selection. 
+    ◾ \ Fixture move in a negative direction across the selection. 
 
-  ◾ /\ Fixture mirror in a positive direction. 
+    ◾ /\ Fixture mirror in a positive direction. 
     
-  ◾ / Fixture mirror in a negative direction.
+    ◾ / Fixture mirror in a negative direction.
     
 7.  Set the Offset {Pattern Spread} - Default is 100%. 
     
-  ◾ 100% = Selection is divided 100% transitioning across the Primitive.
+    ◾ 100% = Selection is divided 100% transitioning across the Primitive.
     
-  ◾ 0% = all fixtures transition in unison.
+    ◾ 0% = all fixtures transition in unison.
     
 8.  Set Swing (In Base) as needed 13.1. Effects Basics
     
@@ -195,7 +195,7 @@ The Smart Screen Effects Editor allows users to quickly build effects within the
 10.  Set the Rate - x.xx Rate is a multiplier of the time value. Default Effect Time is 4 seconds to complete the cycle
     
 
->Similar results to inverting the pattern functions may be achieved by reversing the selection direction with the {⬅️ Negative}, {Positive ➡️} keys
+>Similar results to inverting the pattern functions may be achieved by reversing the selection direction with the {⟵ Negative}, {Positive ⟶ } keys
 
 
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FMLJPn65GrCpdENgeBuI3%2F13.2.1.webp?alt=media&token=ac88df5b-06e7-4313-9407-bc348c14f3c3)
@@ -211,17 +211,17 @@ For Grouping to be noticeable there must be an Pattern Offset Spread above 0%.
     
 3.  Set the {Blocks Of} [#] - This interleaves the Pattern into Groupings. 
    
-◾ The Default for Blocks and Sub Block is 1/0 - No Groupings. 
+    ◾ The Default for Blocks and Sub Block is 1/0 - No Groupings. 
    
-◾ When {Blocks Of} is set to 1 or above, the Sub Blocks will move to 1 and Interleave Groups will be possible. 
+    ◾ When {Blocks Of} is set to 1 or above, the Sub Blocks will move to 1 and Interleave Groups will be possible. 
    
-◾ e.g. 2/1 would interleave a selection into Odds/Evens. 
+    ◾ e.g. 2/1 would interleave a selection into Odds/Evens. 
    
-◾ e.g. 3/1 would interleave a selection of 12 fixtures into [1+4+7+10] - [2+5+8+11] - [3+6+9+12]
+    ◾ e.g. 3/1 would interleave a selection of 12 fixtures into [1+4+7+10] - [2+5+8+11] - [3+6+9+12]
     
 4.  Set the {Sub Blocks Of} - Combines fixture in a selection, to act like single fixtures. 
 
-◾ e.g. 12/2 would combine [1+2] - [3+4] - [5+6] - [7+8] - [9+10] - [11+12]
+    ◾ e.g. 12/2 would combine [1+2] - [3+4] - [5+6] - [7+8] - [9+10] - [11+12]
     
 
 >As a shortcut, Setting {Sub Block Of} back to 0 allows {Blocks Of} to combine fixtures instead of interleaving - 2/0 would combine [1+2] - [3+4] - [5+6] - [7+8] - [9+10] - [11+12]
@@ -469,7 +469,8 @@ Building Effects in the Advanced Editor differs from the Smart Screen Editor in 
 1.  Tap a Function from the Favorites tab or All Functions tab - The Function background will turn purple.
     
 2.  Tap the space to the right of an existing Effect Even - A new Effect Event will be stacked beside the existing one.
-   -   Each Stacked Effect Event can have its own Primitive and Pattern.
+
+-   Each Stacked Effect Event can have its own Primitive and Pattern.
     
 
 **Combining Effects Events:**
