--- a/24-Connecting-to-External-Devices.Rmd
+++ b/24-Connecting-to-External-Devices.Rmd
@@ -18,11 +18,11 @@ This chapter deals with configuring, transmitting and receiving DMX over Etherne
 
 -   Data Network - Accessible via the two etherCON connectors on the rear panel. 
 
-◾ Used for Art-Net, sACN, Compulite VC protocol nodes and Master/Slave backup.
+    ◾ Used for Art-Net, sACN, Compulite VC protocol nodes and Master/Slave backup.
     
 -   General Networks - Accessible via the two RJ45 connectors on the rear panel. 
 
-◾ Used for Network storage of show files and remote diagnostics.
+    ◾ Used for Network storage of show files and remote diagnostics.
     
 
 Each network device must have its own unique static IP address in the form of four triplets xxx.xxx.xxx.xxx, to identify it on the network. In Vibe, this can be set in the System Settings pop-up. It is not necessary to have three digits in each segment of the IP but there must be at least one digit in each segment. Vibe ships with a default Subnet Mask of 255.0.0.0 which means that it is only important that the first triplets of the IP, (the start address), must match on all devices in the network. Devices on the same network must **not** have identical IP addresses.
@@ -69,25 +69,25 @@ Compulite manufactures the **ePort** brand of DMX over Ethernet nodes. **Support
 
 -   ePort 41 - Prior to Sept 2016 (check serial number with Compulite to confirm) 
 
-◾ Compulite VC protocol
+    ◾ Compulite VC protocol
 
-◾ Art-Net v2
+    ◾ Art-Net v2
     
 -   ePort-41 - Current 
 
-◾ sACN pre-release and release versions 
+    ◾ sACN pre-release and release versions 
 
-◾ Art-Net 3 
+    ◾ Art-Net 3 
 
-◾ Compulite VC protocol
+    ◾ Compulite VC protocol
     
 -   ePort-8 and ePort-2 
 
-◾ sACN pre-release and release versions 
+    ◾ sACN pre-release and release versions 
 
-◾ Art-Net 3 
+    ◾ Art-Net 3 
 
-◾ Compulite VC protocol For more product information, See: ePort Documents
+    ◾ Compulite VC protocol For more product information, See: ePort Documents
     
 
 Before an ePort can be connected it should be configured using the CNET Manager software, available at the above link.
@@ -111,7 +111,7 @@ Before an ePort can be connected it should be configured using the CNET Manager 
 
 ## Connecting to Art-Net and sACN Nodes
 
-Vibe currently supports transmission of 256 universes of DMX over Ethernet using the industry standards of Art-Net versions 1 ➡️ 3, ad eACN (ANSI E1.31-2016 standard).
+Vibe currently supports transmission of 256 universes of DMX over Ethernet using the industry standards of Art-Net versions 1 ⟶ 3, ad eACN (ANSI E1.31-2016 standard).
 
 **Enable Art-Net or sACN output:**
 
@@ -129,7 +129,7 @@ Vibe currently supports transmission of 256 universes of DMX over Ethernet using
 
 The Vibe is capable of transmitting more than one protocol at a time. To save bandwidth it is also possible to enable only the universes for each protocol that are required. Vibe has separate universe patches for VCs, Art-Net, and sACN. By default, universes are patched 1 to 1 for each protocol. It is possible to reroute universe output destinations. Normally fixtures patched to console source universe 1 would be transmitted on Ethernet destination universe 1 but sometimes when multiple consoles are on line it is desirable to reroute universes to avoid conflicts. Source universe 1 for example could be rerouted to destination universe 101.
 
->The Vibe is licensed for 64, 96, 128, or 255 console source universes but these universes may be freely rerouted to any destination universe from 0 ➡️ 256 providing the total amount of universes does not exceed the purchased license.
+>The Vibe is licensed for 64, 96, 128, or 255 console source universes but these universes may be freely rerouted to any destination universe from 0 ⟶  256 providing the total amount of universes does not exceed the purchased license.
 
 **Reroute Console Universes:**
 
@@ -177,11 +177,11 @@ It is possible to set specific IPs to send the output to. If there is a port con
 
 
 
-On the first line – ports 1➡️ 5 will be sent to IP 172.16.10.10
+On the first line – ports 1 ⟶ 5 will be sent to IP 172.16.10.10
 
 On the second line – port 5 will be sent also to IP 172.16.10.11
 
-On the third line – ports 6➡️ 10 will be sent to IP 172.16.10.12
+On the third line – ports 6 ⟶ 10 will be sent to IP 172.16.10.12
 
 
 
